--- a/src/index.css
+++ b/src/index.css
@@ -1,145 +1,154 @@
 @import url('https://fonts.googleapis.com/css2?family=Almendra+SC&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background: url("imgbank.jpg") #030728 no-repeat center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: url("/imgbank.jpg") #030728 no-repeat center;
+  background-size: cover;
 }
 
 #root {
-    width: 100%;
+  width: 100%;
 }
 
 .button-container {
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .currency-converter {
-    margin: 0 auto;
-    padding: 40px 30px 50px;
-    border-radius: 8px;
-    max-width: 410px;
-    backdrop-filter: blur(30px);
-    background: rgba(2, 7, 40, 0.5);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5);
+  margin: 0 auto;
+  padding: 40px 30px 50px;
+  border-radius: 8px;
+  max-width: 410px;
+  backdrop-filter: blur(30px);
+  background: rgba(2, 7, 40, 0.5);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5);
 }
 
-.currency-converter .converter-title {
-    color: #fff;
-    font-size: 1.6rem;
-    font-weight: 600;
-    text-align: center;
+.converter-title {
+  color: #fff;
+  font-size: 1.6rem;
+  font-weight: 600;
+  text-align: center;
 }
 
-.currency-converter .converter-form {
-    margin-top: 45px;
+.converter-form {
+  margin-top: 45px;
 }
 
-.converter-form .form-group {
-    display: flex;
-    margin-bottom: 30px;
-    flex-direction: column;
+.form-group {
+  display: flex;
+  margin-bottom: 30px;
+  flex-direction: column;
 }
 
-.converter-form .form-group .form-label {
-    color: #fff;
-    font-weight: 500;
-    display: block;
-    margin-bottom: 9px;
-    font: 1rem;
+.form-label {
+  color: #fff;
+  font-weight: 500;
+  margin-bottom: 9px;
+  font-size: 1rem;
 }
 
-.converter-form .form-group .form-input {
-    outline: none;
-    font-size: 1.1rem;
-    padding: 0 15px;
-    color: #fff;
-    font-weight: 500;
-    min-height: 48px;
-    border-radius: 6px;
-    background: rgba(255, 255, 255, 0.1);
-    border: 1px solid rgba(255, 255, 255, 0.5);
+.form-input {
+  outline: none;
+  font-size: 1.1rem;
+  padding: 0 15px;
+  color: #fff;
+  font-weight: 500;
+  min-height: 48px;
+  border-radius: 6px;
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
-.converter-form .form-currency-group{
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+.form-currency-group {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.form-currency-group .currency-select {
-    display: flex;
-    padding: 0 10px;
-    min-height: 45px;
-    align-items: center;
-    border-radius: 6px;
-    background: rgba(255, 255, 255, 0.1);
-    border: 1px solid rgba(255, 255, 255, 0.5);
+.currency-select {
+  display: flex;
+  padding: 0 10px;
+  min-height: 45px;
+  align-items: center;
+  border-radius: 6px;
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
-.form-currency-group .currency-select img {
-    width: 25px;
+.currency-select img {
+  width: 25px;
 }
 
-.form-currency-group .currency-select .currency-dropdown {
-    outline: none;
-    border: none;
-    background: none;
-    color: #fff;
-    font-size: 1rem;
-    font-weight: 500;
-    padding: 0 10px 0 5px;
+.currency-dropdown {
+  outline: none;
+  border: none;
+  background: none;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 500;
+  padding: 0 10px 0 5px;
 }
 
-.form-currency-group .currency-select .currency-dropdown option {
-   color: #000;
-   font-weight: 500;
+.currency-dropdown option {
+  color: #000;
+  font-weight: 500;
 }
 
-.form-currency-group .swap-icon {
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
-    display: flex;
-    margin-top: 25px;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    background: rgba(255, 255, 255, 0.1);
-    border: 1px solid;
-    transition: 0.2s ease;
+.swap-icon {
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  display: flex;
+  margin-top: 25px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid;
+  transition: 0.2s ease;
 }
 
-.form-currency-group .swap-icon:hover {
-    background: rgba(255, 255, 255, 0.2);
-} 
-
-.converter-form .submit-button {
-    width: 100%;
-    min-height: 52px;
-    border-radius: 6px;
-    border: none;
-    outline: none;
-    font-size: 1rem;
-    font-weight: 600;
-   cursor: pointer;
-   transition: 0.2s ease;
+.swap-icon:hover {
+  background: rgba(255, 255, 255, 0.2);
 }
 
-.converter-form .submit-button:hover {
-    background: rgba(255, 255, 255, 0.8);
+.submit-button {
+  width: 100%;
+  min-height: 52px;
+  border-radius: 6px;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 0.2s ease;
+}
+
+.submit-button:hover {
+  background: rgba(255, 255, 255, 0.8);
+}
+
+.exchange-rate-result {
+  color: #fff;
+  font-size: 1.2rem;
+  margin-top: 20px;
+  font-weight: 500;
+  text-align: center;
 }
